// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renderer/routes/Notifications.tsx > should force account header when multiple accounts 1`] = `
<div>
  <p>
    Oops
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should keep previous state while loading 1`] = `
<div>
  <div
    class="flex flex-col h-screen"
    data-testid="notifications"
  >
    <div
      class="grow overflow-x-hidden overflow-y-auto"
    >
      <div
        data-account-id="123456789"
        data-show-header="false"
        data-testid="account-notifications"
      />
    </div>
  </div>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should keep previous state while loading 2`] = `
<div>
  <p>
    AllRead
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should render AllRead when there are no notifications and no errors 1`] = `
<div>
  <p>
    Oops
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should render Offline Error when not online 1`] = `
<div>
  <p>
    Oops
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should render Oops for bad credentials 1`] = `
<div>
  <p>
    Oops
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should render Oops for default error 1`] = `
<div>
  <p>
    Oops
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should render Oops for unknown error 1`] = `
<div>
  <p>
    Oops
  </p>
</div>
`;

exports[`renderer/routes/Notifications.tsx > should render account notifications when present 1`] = `
<div>
  <p>
    Oops
  </p>
</div>
`;
